# SoundShield

./: .gitignore  CMakeLists.txt  INSTALL  LICENSE  README.md
CMake/: FindLIBWEBSOCKETS.cmake  FindPython.cmake  FindSNDFILE.cmake
application/src/: index.html
application/src/CSS/: main.css
application/src/assets/css/: jquery.jscrollpane.css  jquery.powertip.css  player.css
application/src/assets/css/app/: app.v1.css
application/src/assets/js/flot/examples/realtime/: index.html
application/src/assets/js/soundshield/: _fft-plot.js  fft-plot.js  soundshield.js
application/src/assets/php/elFinder/: connector.php
application/src/assets/php/filebrowser/: scan.php
application/src/assets/php/filebrowser/files/: Template.html
config/: SoundShieldConfig.h  SoundShieldConfig.h.in
python/: cross-fade.ipynb  filter.py  filterbank.py  mask-preprocess.py  test.py  thinkdsp.py
python/.ipynb_checkpoints/: cross-fade-checkpoint.ipynb
python/pyfilterbank-master/: setup.py
python/pyfilterbank-master/pyfilterbank/: __init__.py  octbank.py  sosfiltering.py
src/: CMakeLists.txt  soundshield.c  ss_api.c  ss_api.h  ss_callback.c  ss_callback.h  ss_config.c  ss_config.h  ss_fft.c  ss_fft.h  ss_mask_generation.c  ss_mask_generation.h  ss_psd.c  ss_psd.h  ss_server.c  ss_server.h
